# kirpich-writer

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  main.cpp
src/archiving/: manager.cpp  manager.h
src/archiving/ffmpeg/: camera.cpp  camera.h
src/config/: environment.cpp  environment.h
src/http/: server.cpp  server.h
src/log/: log.h
test/: CMakeLists.txt
test/archiving/: archiving.cpp
test/config/: environment.cpp
test/http/: http.cpp
